--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= @title %></title>
-    <link rel="stylesheet" href="build/css/application.css">
-  </head>
-  <body>
-    <%= yield %>
-  </body>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title><%= @title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="build/css/application.css" />
+  <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+</head>
+<body>
+
+<%= yield %>
+
+<script src="build/js/application.min.js"></script>
+</body>
 </html>
